@@ -35,6 +35,7 @@ VALUE oci8_metadata_create(OCIParam *parmhp, VALUE svc, VALUE desc)
         rb_raise(rb_eRuntimeError, "invalid class in PTYPE_TO_CLASS");
     }
     base = DATA_PTR(obj);
+    base->type = OCI_DTYPE_PARAM;
     base->hp = parmhp;
     rb_ivar_set(obj, id_at_is_implicit, RTEST(desc) ? Qfalse : Qtrue);
     rb_ivar_set(obj, id_at_con, svc);
@@ -231,7 +232,7 @@ static void oci8_desc_free(OCIDescribe *dschp)
         OCIHandleFree(dschp, OCI_HTYPE_DESCRIBE);
 }
 
-static VALUE oci8_describe(VALUE self, VALUE name, VALUE klass, VALUE check_public)
+static VALUE oci8_do_describe(VALUE self, void *objptr, ub4 objlen, ub1 objtype, VALUE klass, VALUE check_public)
 {
     oci8_svcctx_t *svcctx = DATA_PTR(self);
     OCIDescribe *dschp;
@@ -239,11 +240,6 @@ static VALUE oci8_describe(VALUE self, VALUE name, VALUE klass, VALUE check_publ
     VALUE type;
     sword rv;
     VALUE desc;
-
-    StringValue(name);
-    if (RSTRING(name)->len == 0) {
-        rb_raise(rb_eArgError, "empty string is set.");
-    }
 
     type = rb_hash_aref(class_to_ptype, klass);
     oci_lc(OCIHandleAlloc(oci8_envhp, (dvoid *)&dschp, OCI_HTYPE_DESCRIBE, 0, 0));
@@ -254,10 +250,8 @@ static VALUE oci8_describe(VALUE self, VALUE name, VALUE klass, VALUE check_publ
         /* size of OCI_ATTR_DESC_PUBLIC is undocumented. */
         oci_lc(OCIAttrSet(dschp, OCI_HTYPE_DESCRIBE, &val, 0, OCI_ATTR_DESC_PUBLIC, oci8_errhp));
     }
-    oci_rc2(rv, svcctx, OCIDescribeAny(svcctx->base.hp, oci8_errhp, 
-                                       RSTRING(name)->ptr, RSTRING(name)->len,
-                                       OCI_OTYPE_NAME, OCI_DEFAULT, FIX2INT(type),
-                                       dschp));
+    oci_rc2(rv, svcctx, OCIDescribeAny(svcctx->base.hp, oci8_errhp, objptr, objlen,
+                                       objtype, OCI_DEFAULT, FIX2INT(type), dschp));
     if (rv == OCI_ERROR) {
         if (oci8_get_error_code(oci8_errhp) == 4043) {
             /* ORA-04043: object xxxx does not exist */
@@ -276,6 +270,24 @@ static VALUE oci8_describe(VALUE self, VALUE name, VALUE klass, VALUE check_publ
         oci8_raise(oci8_errhp, rv, NULL);
     }
     return oci8_metadata_create(parmhp, self, desc);
+}
+
+static VALUE oci8_describe(VALUE self, VALUE name, VALUE klass, VALUE check_public)
+{
+    StringValue(name);
+    if (RSTRING(name)->len == 0) {
+        rb_raise(rb_eArgError, "empty string is set.");
+    }
+    return oci8_do_describe(self, RSTRING(name)->ptr, RSTRING(name)->len, OCI_OTYPE_NAME, klass, check_public);
+}
+
+static VALUE metadata_get_type_metadata(VALUE self, VALUE klass)
+{
+    oci8_base_t *base = DATA_PTR(self);
+    OCIRef *ref = NULL;
+
+    oci_lc(OCIAttrGet(base->hp, OCI_DTYPE_PARAM, &ref, NULL, OCI_ATTR_REF_TDO, oci8_errhp));
+    return oci8_do_describe(rb_ivar_get(self, id_at_con), ref, 0, OCI_OTYPE_REF, klass, Qfalse);
 }
 
 void Init_oci8_metadata(VALUE cOCI8)
@@ -306,4 +318,5 @@ void Init_oci8_metadata(VALUE cOCI8)
     rb_define_private_method(cOCI8MetadataBase, "__charset_name", metadata_get_charset_name, 1);
 
     rb_define_private_method(cOCI8, "__describe", oci8_describe, 3);
+    rb_define_private_method(cOCI8MetadataBase, "__type_metadata", metadata_get_type_metadata, 1);
 }
